# midi-voice-separator

./: .editorconfig  .gitignore  .prettierignore  AB_PLAYBACK_PLAN.md  CONTENT_BASED_NOTE_MATCHING_PLAN.md  CROSS_IMPORT_DIFFING_PLAN.md  EDITABLE_SIDE_B_PLAN.md  EXPORT_ROUNDTRIP_VERIFICATION_PLAN.md  KEYBOARD_COMMANDS_PLAN.md  MANUAL_TEST_CASES.md  NEXT_FEATURES_MASTER_PLAN.md  PLAN.local.md  README.md  SPLIT_SCREEN_PLAN.md  VOICE_LANE_PARITY_PLAN.md  agents.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  wdio.conf.mjs
e2e/: assignment-metric.e2e.ts  changed-notes-overlay.e2e.ts  compare-preview.e2e.ts  conflicts-and-ruler.e2e.ts  cross-import.e2e.ts  diff-summary.e2e.ts  editable-b.e2e.ts  export-readiness.e2e.ts  export-verification.e2e.ts  fullscreen-workspace.e2e.ts  heatmap-and-audition.e2e.ts  import-export.e2e.ts  paint-mode.e2e.ts  pitch-ranges.e2e.ts  playback.e2e.ts  rerun-guard.e2e.ts  rerun-reconciliation.e2e.ts  review-mode.e2e.ts  scoped-playback.e2e.ts  selection-and-reassignment.e2e.ts  smart-fixes.e2e.ts  smart-select.e2e.ts  snapshots.e2e.ts  (+4 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: midi.rs  mod.rs
src-tauri/src/midi/: assignment_metric.rs  content_matching.rs  export_validation.rs  exporter.rs  mod.rs  model.rs  parser.rs  round_trip_verification.rs  voice_assignment.rs
src-tauri/tests/fixtures/content_matching/: different_ppq.json  duplicates.json  related_tolerant.json  unrelated.json
(+142 files in other folders)
