[package]
name = "chiptune-voice-separator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chiptune_voice_separator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
midly = { version = "0.5.3", default-features = false, features = ["std"] }
tauri-plugin-wdio = "1"

# The real-fixture regression tests run the Global beam search over
# thousands of notes; at opt-level 0 that alone takes tens of seconds per
# `cargo test` run. Light optimization keeps the whole suite fast without
# meaningfully hurting compile times or debuggability.
[profile.test]
opt-level = 1
